@@ -2,6 +2,8 @@
 
 Changes with Apache 2.3.12
 
+  *) Enable DEFAULT_REL_RUNTIMEDIR on Windows and NetWare.  [various]
+
   *) Correct C++ incompatibility with http_log.h.  [Stefan Fritsch, Jeff
      Trawick]
 
